syntax = "proto3";

package greet;

option go_package = "github.com/victorvbello/gonotes/course/grpc/greetssl/proto";

message GreetSSLRequest {
    string first_name = 1;
    string last_name = 2;
}

message GreetSSLResponse {
    string message = 1;
}

service GreetSSLService {
    rpc Greet (GreetSSLRequest) returns (GreetSSLResponse);
}